added giving@lifechurch email
Change-Id: Ifc4d414b1f237fd5959d6c63009a204edf8d8142

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -491,10 +491,10 @@ en:
     card exp date:                              "Expiration date"
     receipt:                                    "Email me a copy of my receipt."
     preview:                                    "Preview Donation"
-    header copy:                                "Donate copy. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. *NC*"
-    header confirm copy:                        "Donate copy. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. *NC*"
-    email header:                               "Email header copy"
-    email footer:                               "Email footer copy"
+    header copy:                                "Together, we could become the most Bible-engaged generation in history. Your support means people can open God's Word on more platforms, in more languages, in more versions, and in more countries than ever before. Please fill out the form below to make your donation."
+    header confirm copy:                        "Together, we could become the most Bible-engaged generation in history. Your support means people can open God's Word on more platforms, in more languages, in more versions, and in more countries than ever before. Click Donate Now to make your donation."
+    email header:                               "YouVersion, a ministry of LifeChurch.tv, has received your donation. No goods or services were provided in exchange for the donation, except intangible religious benefits. Please contact giving@lifechurch.tv with questions."
+    email footer:                               "Your donation will help people around the world fall in love with God's Word."
   download ad:
     title:                                      "Download the Free Bible App"
     line 1:                                     "Hundreds of versions in many"
