--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -478,7 +478,8 @@ en:
     suggestion html:                            "Did you mean %{suggestion_link}?"
     all versions:                               "All %{language_name} Versions"
   donate:
-    donate now:                                 "Donate Now"
+    donate now:                                 "Donate Now (US)"
+    donate now intl:                            "or donate internationally"
     promo 1:                                    "For every $1 you give, 10 more people get access to the Bible on their mobile phone."
     promo 2:                                    "With YouVersion, the Bible is always nearby. Watch our video."
     promo 3:                                    "This year over 5 billion people will use a mobile phone. Donate now."
