--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -240,7 +240,7 @@ en:
       your information title:                   "Information you provide"
       your information text:                    "When you sign up for a YouVersion account, or another LifeChurch.tv service or promotion that requires registration, we ask you for personal information (such as your name, email address and an account password). We may combine the information you submit under your account, with information from other LifeChurch.tv services or third parties to provide you with a better experience and to improve the quality of our services. For certain services, we may allow you to opt out of combining such information."
       device id title:                          "Unique Device ID"
-      device id text:                           "When you access the YouVersion Bible Application, we may collect your Unique Device ID (“UDID”) and/or IP address. We use your UDID to provide a tailored experience for you. The UDID information is collected in order to determine the aggregate number of unique devices using our service or parts of our service, to track total usage, analyze data, and communicate with you more effectively. We may combine your UDID with information from third parties to provide you with a better experience and to improve the quality of our service. We do not share any personally identifiable information with third parties in association with your UDID."  
+      device id text:                           "When you access the YouVersion Bible Application, we may collect your Unique Device ID ('UDID') and/or IP address. We use your UDID to provide a tailored experience for you. The UDID information is collected in order to determine the aggregate number of unique devices using our service or parts of our service, to track total usage, analyze data, and communicate with you more effectively. We may combine your UDID with information from third parties to provide you with a better experience and to improve the quality of our service. We do not share any personally identifiable information with third parties in association with your UDID."  
       cookies title:                            "LifeChurch.tv cookies"
       cookies text:                             "When you visit %{link}, we may send one or more cookies to your computer, so that we may uniquely identify your browser. (A cookie is simply a tiny text file containing a string of characters.) Accepting our cookies allows you to keep your user preferences from session to session. Although most browsers accept cookies by default, you can set your browser to refuse all cookies, or to tell you when you're being sent a cookie. Some YouVersion features and services may not function properly if you have cookies disabled."   
       log title:                                "Log information"
@@ -500,7 +500,7 @@ en:
   download ad:
     title:                                      "Download the Free Bible App"
     line 1:                                     "Hundreds of versions in many"
-    line 2:                                     "different languages—the Bible that"
+    line 2:                                     "different languages - the Bible that"
     line 3:                                     "goes with you anywhere."
     download:                                   "Download Now"
   about page:
@@ -553,7 +553,7 @@ en:
     t2:                                         "Great program!"
     t2 copy:                                    "This app helps keep me organized and reading God's Word every single day. It is easy to use and offers multiple features ... Love it!"
     t3:                                         "Wonderful app."
-    t3 copy:                                    "Great app with a wide selection of Bibles to choose from. … The audio Bibles are also wonderful and easy to understand."
+    t3 copy:                                    "Great app with a wide selection of Bibles to choose from. ... The audio Bibles are also wonderful and easy to understand."
     iphone ipad:                                "iPhone/iPad"
     android:                                    "Android"
     blackberry:                                 "BlackBerry"
